--- a/Mapplas/Mapplas/Mapplas-Info.plist
+++ b/Mapplas/Mapplas/Mapplas-Info.plist
@@ -8,6 +8,19 @@
 	<string>${PRODUCT_NAME}</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
+	<key>CFBundleIcons</key>
+	<dict>
+		<key>CFBundlePrimaryIcon</key>
+		<dict>
+			<key>CFBundleIconFiles</key>
+			<array>
+				<string>ic_mapplas.png</string>
+				<string>ic_mapplas@2x.png</string>
+			</array>
+		</dict>
+	</dict>
+	<key>UIPrerenderedIcon</key>
+	<string>YES</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.mapplas.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -31,8 +44,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
