--- a/Mapplas/Mapplas/Mapplas-Info.plist
+++ b/Mapplas/Mapplas/Mapplas-Info.plist
@@ -18,11 +18,11 @@
 				<string>ic_mapplas@2x.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
-			<false/>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.mapplas.SEFO</string>
+	<string>com.mapplas.Mapplas</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -38,7 +38,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIPrerenderedIcon</key>
-	<string>no</string>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
